corrected Giphy API link

--- a/webDevelopment.html
+++ b/webDevelopment.html
@@ -49,10 +49,10 @@
             </div>
             <div class="col">
                 <div class="card">
-                  <a href ="https://codepen.io/darahdesigner/pen/LYygYyM"><img src="GIPHY Logo 75px.png" class="card-img-top" alt="Gif searching website developed using GIPHY API."></a>
+                  <a href ="https://darahsgiphyapi.web.app/"><img src="giphyAPIScreenshot.png" class="card-img-top" alt="Gif searching website developed using GIPHY API."></a>
                   <div class="card-body">
-                    <a href = "https://codepen.io/darahdesigner/pen/LYygYyM><h5 class="card-title">Website utilizing GIPHY</h5></a>
-                    <p class="card-text">Information Website populated with data fetch from Pokemon data sourced from PokeAPI.</p>
+                    <a href = "https://darahsgiphyapi.web.app/><h5 class="card-title">Website utilizing GIPHY</h5></a>
+                    <p class="card-text">Information Website populated with data fetch from GIPHY's API. Created with codepen.io, VS Code, HTML5, CSS3, and JavaScript.</p>
                   </div>
                 </div>
               </div>
